# screenplay-scripter

./: .gitignore  LICENSE  README.md  pyproject.toml  record-take.sh
.github/workflows/: ci.yml  release.yml
.omc/: RELEASE_RULE.md
.omc/plans/: open-questions.md  screenplay-scripter-plan.md
.omc/specs/: deep-interview-screenplay-scripter.md
src/scripter/: __init__.py  backend.py  cli.py  codegen.py  dsl.py  menubar.py  player.py  recorder.py
tests/: test_backend_capability.py  test_backend_dryrun.py  test_codegen.py  test_dsl_import.py  test_recorder_gating.py  test_review_pauses.py
