[project]
name = "screenplay-scripter"
version = "0.2.0"
description = "Record and replay macOS mouse/keyboard interactions as human-readable Python scripts"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pynput>=1.7",
    "pyobjc-framework-quartz>=10.0",
    "rumps>=0.4",
]

[project.scripts]
scripter = "scripter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripter"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
